WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203173
[ Mac WK1 ] REGRESSION (
r251261
): Layout Test inspector/console/webcore-logging.html is consistently Failing
https://bugs.webkit.org/show_bug.cgi?id=203173
Summary
[ Mac WK1 ] REGRESSION (r251261): Layout Test inspector/console/webcore-loggi...
Russell Epstein
Reported
2019-10-18 16:52:29 PDT
The following layout test is failing consistently on Mac after the changes landed in
r251261
: inspector/console/webcore-logging.html Steps to Reproduce: run-webkit-tests --no-retry --no-sample-on-timeout inspector/console/webcore-logging.html -1 --iter 20 Test History:
https://results.webkit.org/?suite=layout-tests&test=inspector%2Fconsole%2Fwebcore-logging.html
Diff: --- /Volumes/Data/slave/mojave-release-tests-wk1/build/layout-test-results/inspector/console/webcore-logging-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk1/build/layout-test-results/inspector/console/webcore-logging-actual.txt @@ -27,11 +27,14 @@ -- Running test case: Console.Logging.MediaLogging PASS: Media logging disabled. PASS: Media logging has been enabled. -PASS: Media log message should have source 'media'. +FAIL: Media log message should have source 'media'. + Expected: truthy + Actual: false -- Running test case: Console.Logging.LogAsJSONWithoutRepeat PASS: Media logging disabled. PASS: Verbose media logging has been enabled. +ASSERT: undefined PASS: Message logged as JSON. PASS: ConsoleMessage repeatCount is 1. PASS: Message logged as JSON.
Attachments
Patch
(5.42 KB, patch)
2019-10-21 11:22 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews213 for win-future
(13.75 MB, application/zip)
2019-10-21 12:41 PDT
,
EWS Watchlist
no flags
Details
Patch for landing
(5.25 KB, patch)
2019-10-23 10:43 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.19 KB, patch)
2019-10-23 10:45 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.30 KB, patch)
2019-10-24 14:53 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-18 16:52:52 PDT
<
rdar://problem/56424721
>
Russell Epstein
Comment 2
2019-10-18 16:59:05 PDT
Updated TestExpectations in
r251313
Sihui Liu
Comment 3
2019-10-21 11:22:34 PDT
Created
attachment 381422
[details]
Patch
Sihui Liu
Comment 4
2019-10-21 11:42:57 PDT
***
Bug 203118
has been marked as a duplicate of this bug. ***
EWS Watchlist
Comment 5
2019-10-21 12:41:36 PDT
Comment on
attachment 381422
[details]
Patch
Attachment 381422
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13159659
New failing tests: fast/repaint/backgroundSizeRepaint.html
EWS Watchlist
Comment 6
2019-10-21 12:41:38 PDT
Created
attachment 381429
[details]
Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
EWS Watchlist
Comment 7
2019-10-21 14:21:34 PDT
Comment on
attachment 381422
[details]
Patch
Attachment 381422
[details]
did not pass jsc-ews (mac): Output:
https://webkit-queues.webkit.org/results/13159780
New failing tests: mozilla-tests.yaml/js1_5/Array/regress-101964.js.mozilla-dfg-eager-no-cjit-validate-phases
Geoffrey Garen
Comment 8
2019-10-21 20:15:58 PDT
Comment on
attachment 381422
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=381422&action=review
r=me
> LayoutTests/ChangeLog:9 > + play() returns a promise and the promise can be rejected by a later ause(). We didn't handle
pause()
Sihui Liu
Comment 9
2019-10-23 10:43:46 PDT
Created
attachment 381692
[details]
Patch for landing
Sihui Liu
Comment 10
2019-10-23 10:45:39 PDT
Created
attachment 381694
[details]
Patch for landing
WebKit Commit Bot
Comment 11
2019-10-23 11:29:36 PDT
Comment on
attachment 381694
[details]
Patch for landing Clearing flags on attachment: 381694 Committed
r251482
: <
https://trac.webkit.org/changeset/251482
>
WebKit Commit Bot
Comment 12
2019-10-23 11:29:38 PDT
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 13
2019-10-23 17:05:02 PDT
Reverted
r251482
for reason:
r251261
broke multiple tests, reverting this as part of that rollout. Committed
r251513
: <
https://trac.webkit.org/changeset/251513
>
Alexey Proskuryakov
Comment 14
2019-10-24 12:08:01 PDT
Marking as fixed again. The test fix got rolled back, but the issue doesnt' exist on trunk at this point.
Geoffrey Garen
Comment 15
2019-10-24 13:14:13 PDT
I think we want to re-land
r251482
; it was an error to roll it out, since it fixed a bug and did not cause any test failures.
Sihui Liu
Comment 16
2019-10-24 14:53:38 PDT
Created
attachment 381844
[details]
Patch for landing
Sihui Liu
Comment 17
2019-10-24 14:54:45 PDT
(In reply to Sihui Liu from
comment #16
)
> Created
attachment 381844
[details]
> Patch for landing
Relanding this patch per
https://bugs.webkit.org/show_bug.cgi?id=203173#c15
.
WebKit Commit Bot
Comment 18
2019-10-24 15:12:57 PDT
Comment on
attachment 381844
[details]
Patch for landing Clearing flags on attachment: 381844 Committed
r251565
: <
https://trac.webkit.org/changeset/251565
>
WebKit Commit Bot
Comment 19
2019-10-24 15:12:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug