[ Mac WK1 ] REGRESSION (r251261): Layout Test inspector/console/webcore-logging.html is consistently Failing https://bugs.webkit.org/show_bug.cgi?id=203173 <rdar://problem/56424721>

Source/JavaScriptCore:

Hold a strong reference to JSGlobalOjbect in ConsoleMessage so that object is not garbage collected before
WebConsoleAgent::frameWindowDiscarded.

Covered by existing test: inspector/console/webcore-logging.html.

Reviewed by Geoffrey Garen.

* inspector/ConsoleMessage.cpp:
(Inspector::ConsoleMessage::ConsoleMessage):
(Inspector::ConsoleMessage::clear):
* inspector/ConsoleMessage.h:

LayoutTests:

Reviewed by Geoffrey Garen.

play() returns a promise and the promise can be rejected by a later pause(). We didn't handle
that case so we could receive a type JavaScript message for the unhandled rejected promise.

* inspector/console/webcore-logging.html:
* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/216796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251565 268f45cc-cd09-0410-ab3c-d52691b4dbfc