Source/JavaScriptCore/inspector/ConsoleMessage.h
@@ -31,6 +31,7 @@
 #pragma once
 
 #include "ConsoleTypes.h"
+#include "Strong.h"
 #include <wtf/FastMalloc.h>
 #include <wtf/Forward.h>
 #include <wtf/Logger.h>
@@ -94,7 +95,7 @@ private:
     RefPtr<ScriptCallStack> m_callStack;
     Vector<JSONLogValue> m_jsonLogValues;
     String m_url;
-    JSC::JSGlobalObject* m_globalObject { nullptr };
+    JSC::Strong<JSC::JSGlobalObject> m_globalObject;
     unsigned m_line { 0 };
     unsigned m_column { 0 };
     unsigned m_repeatCount { 1 };
